--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 			<h5>Erfahrung</h1>
 
-			<img src=""		
+			<img src="https://mir-s3-cdn-cf.behance.net/user/138/e21cc493669.57d6287e8b4b2.jpg"  alt="Portrait" width="138px" height="138px">		
 
 			<p>...</p>
 
