--- a/index.html
+++ b/index.html
@@ -34,9 +34,27 @@
 
 			<h5>Erfahrung</h1>
 
-			<img src="https://mir-s3-cdn-cf.behance.net/user/138/e21cc493669.57d6287e8b4b2.jpg"  alt="Portrait" width="138px" height="138px">		
+			<img src="https://mir-s3-cdn-cf.behance.net/user/138/e21cc493669.57d6287e8b4b2.jpg" alt="Portrait" width="138px" height="138px">	
 
 			<p>...</p>
+
+			<table>
+
+				<tr>
+					<th>Curriculum Vitae</th>
+				</tr>	
+				<tr>
+					<td>2014-2016</td>
+					<td>Lehrkraft für Kunst und Englisch</td>
+				</tr>
+				<tr>
+					<td>2103-2014</td>
+					<td>Design und Beratung</td>
+				</tr>
+
+			</table>
+
+			<a href="files/cv.pdf" download="cv.pdf">Curriculum Vitae</a>
 
 		</section>
 
