--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
 
 			<h5>Erfahrung</h1>
 
+			<div hidden>
+
 			<img src="https://mir-s3-cdn-cf.behance.net/user/138/e21cc493669.57d6287e8b4b2.jpg" alt="Portrait" width="138px" height="138px">	
 
 			<p>...</p>
@@ -51,38 +53,58 @@
 					<td>2103-2014</td>
 					<td>Design und Beratung</td>
 				</tr>
+				<tr>
+					<td>2006-2013</td>
+					<td>Studium Kommunikationsdesign</td>
+				</tr>
+				<tr>
+					<td>2002-2004</td>
+					<td>Studium Sozialwissenschaften</td>
+				</tr>
 
 			</table>
 
 			<a href="files/cv.pdf" download="cv.pdf">Curriculum Vitae</a>
 
-		</section>
+			</div>	
 
-		<section>
+		</section><!-- 
+
+				Lehre, Workshops, Projekte, Erklärausstellung, Lernmaterial, Formulare, Flipcards
+
+		--><section>
 
 			<h5>Lehre</h1>
 
-			<p>...</p>
+				<p>Lehrkraft für die Fächer Kunst, Darstellendes Spiel und Englisch an der Sekundarschule Hilden.</p>
 
-		</section>
+				<p>Projekte und Workshops zum Thema Kreativitätstechniken. Schnittstellen in der Kunst. Unerwartete Werkmaterialien</p>
 
-		<section>
+		</section><!-- 
+
+				Unternehmensberatung, Kommunikationsmittel, Arbeitsproben... besserer Titel: Strategie?
+
+		--><section>
 
 			<h5>Beratung</h1>
 
 			<p>...</p>
 
-		</section>
+		</section><!--
 
-		<section>
+				Webformular, mailto:, Kontakt auch oben im Header platzieren?
+
+		--><section>
 
 			<h5>Kontakt</h1>
 
 			<p>...</p>
 
-		</section>
+		</section><!--
 
-		<footer role="contentinfo">
+				Brauch es ein About, Impressum als Navigationspunkte?
+
+		--><footer role="contentinfo">
 			
 			<nav>
 		
