--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>Felix Tilch - Beratung</title>
 		<link href="css/main.css" rel="stylesheet" type="text/css">
+		<link href="https://fonts.googleapis.com/css?family=Eczar:400,800" rel="stylesheet"> 
 	</head>
 
 	<body>
 		<header role="banner" class="logo">
 
 			<svg width="100" height="100">
-  			<circle cx="50" cy="50" r="40" stroke="yellow" stroke-width="1" fill="lightgrey" />
+  				<circle cx="50" cy="50" r="40" stroke="yellow" stroke-width="1" fill="lightgrey" />
 			</svg>
 	
-			<a href="index.html"><h1>Felix Tilch <br /> Designleistungen und Lehre</h1></a>
+			<h1><a href="index.html">Felix Tilch <br /> Designleistungen und Lehre</a></h1>
 
 			<nav role="navigation" class="primary navigation">
 
@@ -31,53 +32,55 @@
 
 		<section class="grid">
 
+			<!-- Arbeitsproben, Lebenslauf -->	
+
 			<section class="container">
 
-				<h5>Erfahrung</h1>
-				<div hidden>
-				<img src="https://mir-s3-cdn-cf.behance.net/user/138/e21cc493669.57d6287e8b4b2.jpg" alt="Portrait" width="138px" height="138px">	
+				<h5>Erfahrung</h5>
+				<div *hidden>
+					<img src="https://mir-s3-cdn-cf.behance.net/user/138/e21cc493669.57d6287e8b4b2.jpg" title="Felix Tilch" alt="Portrait" width="138px" height="138px" />
 				
-				<p>Arbeitsproben und Lebenslauf</p>
-				<table class="cv">
-					<tr>
-						<th>Curriculum Vitae</th>
-					</tr>	
-					<tr>
-						<td>2014-2016</td>
-						<td>Lehrkraft für Kunst und Englisch</td>
-					</tr>
-					<tr>
-						<td>2103-2014</td>
-						<td>Design und Beratung</td>
-					</tr>
-					<tr>
-						<td>2006-2013</td>
-						<td>Studium Kommunikationsdesign</td>
-					</tr>
-					<tr>
-						<td>2002-2004</td>
-						<td>Studium Sozialwissenschaften</td>
-					</tr>
-				</table>
+					<p>Arbeitsproben und Lebenslauf</p>
+					<table class="cv">
+						<tr>
+							<th>Curriculum Vitae</th>
+						</tr>	
+						<tr>
+							<td>2014-2016</td>
+							<td>Lehrkraft für Kunst und Englisch</td>
+						</tr>
+						<tr>
+							<td>2103-2014</td>
+							<td>Design und Beratung</td>
+						</tr>
+						<tr>
+							<td>2006-2013</td>
+							<td>Studium Kommunikationsdesign</td>
+						</tr>
+						<tr>
+							<td>2002-2004</td>
+							<td>Studium Sozialwissenschaften</td>
+						</tr>
+					</table>
 
-				<a href="files/cv.pdf" download="cv.pdf">Curriculum Vitae</a>
-
+					<a href="files/cv.pdf" download="cv.pdf" title="Lebenslauf.pdf">Curriculum Vitae</a>
 				</div>	
-			</section><!-- 
+
+			</section class="container"><!-- 
 
 					Lehre, Workshops, Projekte, Erklärausstellung, Lernmaterial, Formulare, Flipcards
 
 			--><section>
-				<h5>Lehre</h1>
+				<h5>Lehre</h5>
 					<p>Lehrkraft für die Fächer Kunst, Darstellendes Spiel und Englisch an der Sekundarschule Hilden.</p>
 					<p>Projekte und Workshops zum Thema Kreativitätstechniken. Schnittstellen in der Kunst. Unerwartete Werkmaterialien</p>
 			</section><!-- 
 
 					Unternehmensberatung, Kommunikationsmittel, Arbeitsproben... besserer Titel: Strategie?
 
-			--><section>
+			--><section class="container">
 
-				<h5>Beratung</h1>
+				<h5>Beratung</h5>
 
 				<p>Entwicklung von mittelständischen Marken.</p>
 
@@ -85,9 +88,9 @@
 
 					Webformular, mailto:, Kontakt auch oben im Header platzieren?
 
-			--><section>
+			--><section class="container">
 
-				<h5>Kontakt</h1>
+				<h5>Kontakt</h5>
 
 				<p>...</p>
 
